[tool.poetry]
name = "ringmaster-app"
version = "0.1.0"
description = "This application provides end-to-end examples for running effective lakehouse streaming jobs"
authors = ["Scott Haines <newfrontcreative@gmail.com>"]
readme = "README.md"

packages = [
    { include = "ringmaster_app" }
]

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.1"
delta-spark = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
